app/css/directives/map.less
//
// Copyright 2015 Next Century Corporation
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

.map-container {
    height: @widget-height;
    width: @widget-width;
    min-height: 100px;

    .alert {
        display: none;
        padding: 6px;
        margin-top: 3px;
    }

    .alert-danger {
        background: none;
        border-color: @error-color;
        color: @error-color;
    }

    .header-container {
        position: absolute;
        z-index: 1005;

        &.name-container {
            left: 10px;
            top: 10px;
        }

        &.menu-container {
            right: 10px;
            top: 10px;
            z-index: 1010;

            .chart-options {
                background-color: @main-background;
                border: @border-color 2px solid;
                border-radius: 4px;

                .popover {
                    max-width: none;
                    padding: 10px 0px 0px;
                    position: absolute;
                    top: 30px;
                    right: -10px;
                }

                .arrow {
                    right: 25px;
                }

                /* Give the menu container a background to make it more readable.  Make it the same height (30 px) and color of the filter reset notifications. */
                a {
                    background-color: transparent;
                    border: none;
                    border-radius: 4px;
                    padding: 5px 5px 2px;
                }
            }

            .info-container {
                margin-left: 5px;

                label {
                    font-size: 14px;
                    margin-bottom: 0px;
                }

                .glyphicon {
                    top: 2px;
                    margin-right: 5px;
                }
            }

            .button-container {
                margin-left: 5px;
            }

            .all-layer-options {
                /* Make the width match the width of the layer-options-well element + border + right padding. */
                width: 555px;

                .layer-options-container {
                    /* Make the width match the width of the layer-options-well element + border. */
                    width: 540px;

                    &.drag-enter {
                        border-color: @accent-dark;
                    }

                    .dragging {
                        /* Display the dragged element above the other elements in its list, even if the other elements are defined after the dragged element in the DOM. */
                        position: relative;
                    }

                    > label {
                        font-size: 14px;
                    }

                    .layer-options-well {
                        cursor: move;
                        /* Make the width match the width of four columns + the columns' margins + this element's padding + this element's borders. */
                        width: 530px;

                        &.new-layer {
                            cursor: inherit;
                        }

                        .layer-options-row {
                            height: 75px;

                            &.row-large {
                                height: auto;
                                display: flex;
                            }

                            .layer-options-col {
                                float: left;
                                width: 120px;
                                margin-left: 10px;

                                &:first-child {
                                    margin-left: 0px;
                                }

                                &.layer-options-col-wide {
                                    width: 250px;
                                }

                                &.btn-group {
                                    /* Make the layer options buttons vertically align with the dropdowns. */
                                    margin-top: 25px;

                                    .btn {
                                        /* Make the combined width of the four layer options buttons match the width of the column. */
                                        padding: 3px 22px 3px 21px;

                                        &.btn-default {
                                            &.active, &.active&:hover, &.active&:focus {
                                                color: #FFFFFF;
                                                background-color: @accent-dark;
                                                border-color: @accent-dark;
                                            }
                                        }

                                        &.active {
                                            z-index: auto;
                                        }
                                    }

                                    .glyphicon {
                                        font-size: 18px;
                                        top: 3px;
                                    }
                                }
                            }
                        }

                        .layer-options-error {
                            color: @error-text-color;
                            margin: 10px 0px 0px;
                        }

                        .layer-options-editing {
                            margin-top: 10px;
                        }
                    }
                }
            }
        }

        &.legend-container {
            bottom: 5px;
            left: 10px;
            z-index: 1009;

            .legend {
                background-color: @main-background;
                border: @border-color 2px solid;
                border-radius: 4px;
                color: @button-color;

                .divider {
                    height: 1px;
                    margin: 0 0 9px 0;
                    overflow: hidden;
                    background-color: @border-color;
                }

                .legend-toggle {
                    padding: 5px;
                }

                .legend-details {
                    overflow: auto;

                    .legend-layer {
                        margin-bottom: 10px;

                        .legend-header {
                            cursor: pointer;
                            position: relative;
                            padding: 5px;

                            .legend-title {
                                margin-right: 25px;
                            }

                            .glyphicon {
                                position: absolute;
                                right: 5px;
                                top: 50%;
                                transform: translate(0, -50%);
                            }
                        }

                        .node-title {
                            color: @main-text-color;
                            font-size: 14px;
                            font-weight: bold;
                            line-height: 1.33;
                            text-transform: uppercase;
                            margin-left: 20px;
                        }

                        .legend-item {
                            margin-left: 20px;
                        }
                    }
                }

                .header-text {
                    cursor: pointer;
                }
            }

            .legend-item {
                border: @main-border;
                border-radius: 5px;
                font-size: 14px;
                margin-top: 0px;
                margin-right: 5px;
                opacity: .8;
                padding: 3px;
                display: block;
            }
        }

        &.filter-container {
            top: 50px;
            right: 45px;
        }
    }

    .olMap {
        // The JS will set the correct background color depending on the base layer used.
        background-color: #fff;
        border-radius: 0 0 4px 4px;
        width: auto !important;
        height: 100% !important;
        position: static;
        margin: 0px !important;

        .olMapViewport {
            .olControlZoom {
                left: inherit;
                right: 10px;
                top: 50px;
                background: transparent;
                padding: 0px;

                a {
                    background-color: @button-background-color;
                    color: @button-color;
                    border: @button-border;
                    border-radius: @border-radius;
                    font-size: 20px;
                    font-family: "Open Sans", Helvetica, arial, sans-serif;
                    line-height: 24px;

                    &:hover{
                        background-color: @button-hover-background-color;
                        color: @button-hover-color;
                        border: @button-hover-border;
                    }
                }
            }
        }
    }

    .olPopup {
        font-size: 12px;
        z-index: 1060 !important;

        table {
            margin: 2px;
        }

        td, th {
            padding: 2px;
        }

        .links-popup-button {
            /* Align under the olPopupCloseBox; the 'top' position will be set by the map because the 'close box' can have different 'top' positions itself. */
            position: absolute;
            right: 13px;
            z-index: 1;

            /* Ensure the width matches the width of the olPopupCloseBox. */
            padding: 1px;
            line-height: 13px;

            .neon-popup-button {
                .glyphicon {
                    color: #333;
                    font-size: 13px;
                }
            }
        }
    }

    .olControlAttribution {
        bottom: 0;
        right: 5px;
        color: @main-text-color;

        a {
            pointer-events: none;
        }
    }

    [id^="OpenLayers_Layer_Boxes_"] {
        z-index: 745 !important;
        pointer-events: none;
    }
}

.visualization-widget-mobile {
    .map-container {
        .olMap {
            height: @mobile-widget-height !important;
        }
    }
}

